--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/icon.svg" type="image/svg+xml">
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/touch-icon.png">
+		<link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
