--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skylarksTheme">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
