feat: add basic styling for admin root page

--- a/backend/pb_public/index.html
+++ b/backend/pb_public/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>PB Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skylarks Diamond Planner Admin</title>
+  <link rel="stylesheet" href="css/admin.css">
 </head>
+
 <body>
-<h1>Skylarks Diamond Planner Admin</h1>
-<p>Nothing to see here.</p>
+<div class="container">
+
+  <main class="card">
+    <img src="images/berlin_skylarks_logo.svg" alt="Skylarks Logo" width="100" height="100">
+    <h1>Skylarks Diamond Planner Admin</h1>
+    <p>Nothing to see here. You probably want one of these:</p>
+
+    <div class="link-container">
+      <a class="button-link" href="https://app.berlinskylarks.de/">Frontend</a>
+      <a class="button-link" href="/_/">Admin Panel</a>
+    </div>
+  </main>
+
+  <footer>
+
+  </footer>
+</div>
 </body>
 </html>
