feat: finalize static landingpage for admin panel

--- a/backend/pb_public/index.html
+++ b/backend/pb_public/index.html
@@ -17,8 +17,9 @@
     <p>Nothing to see here. You probably want one of these:</p>
 
     <div class="link-container">
-      <a class="button-link" href="https://app.berlinskylarks.de/">Frontend</a>
+      <a class="button-link" href="https://app.berlinskylarks.de/">Web App Frontend</a>
       <a class="button-link" href="/_/">Admin Panel</a>
+      <a class="button-link" href="https://www.tib-baseball.de/">CMS Website</a>
     </div>
   </main>
 
