refactor: update Skylarks theme

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark" data-theme="skylarksTheme">
+<html lang="en" class="dark" data-theme="skylarks">
 	<head>
 		<meta charset="utf-8" >
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" >
