--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%sveltekit.assets%/icon.svg" type="image/svg+xml">
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/touch-icon.png">
 		<link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest">
-		<meta name="viewport" content="width=device-width" >
+		<meta name="viewport" content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover" >
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
