--- a/backend/pb_public/index.html
+++ b/backend/pb_public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skylarks Diamond Planner Admin</title>
   <link rel="stylesheet" href="css/admin.css">
+  <link rel="icon" href="images/favicon.svg">
 </head>
 
 <body>
