polish: add noindex to root

--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="skylarks">
-	<head>
-		<meta charset="utf-8" >
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" >
-		<link rel="icon" href="%sveltekit.assets%/icon.svg" type="image/svg+xml">
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/touch-icon.png">
-		<link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest">
-		<meta name="viewport" content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover" >
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<html data-theme="skylarks" lang="en">
+<head>
+  <meta charset="utf-8">
+  <link href="%sveltekit.assets%/favicon.png" rel="icon">
+  <link href="%sveltekit.assets%/icon.svg" rel="icon" type="image/svg+xml">
+  <link href="%sveltekit.assets%/touch-icon.png" rel="apple-touch-icon">
+  <link href="%sveltekit.assets%/manifest.webmanifest" rel="manifest">
+  <meta content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover" name="viewport">
+  <meta content="noindex" name="robots">
+  %sveltekit.head%
+</head>
+<body data-sveltekit-preload-data="hover">
+<div style="display: contents">%sveltekit.body%</div>
+</body>
 </html>
