--- a/src/app.html
+++ b/src/app.html
@@ -12,5 +12,8 @@
 </head>
 <body data-sveltekit-preload-data="hover">
 <div style="display: contents">%sveltekit.body%</div>
+<noscript>This website is actually a JavaScript application with lots of functionality. You need to enable
+  JavaScript for it to work.
+</noscript>
 </body>
 </html>
